Fix compiler warnings
Cleanup from compiler warnings from IntelliJ and by using -Xlint:all
- add -Xlint:all as default compiler arg
- For generics can often leave out type and just use <>
- In some cases we can fix the warnings by adding types, either just <> or
  explicit.
- Suppress unchecked warnings in a few cases that are not really solveable
  without refactoring OA4MP itself. Each case is briefly documented.
- Use the SSHKeyStoreProvider explicitly as SSHKeyStoreProvider<SSHKeyStore<SSHKey>>
  and define the SSHKeyProvider as SSHKeyProvider<V extends SSHKey>
- SQLSSHKeyStoreProvider now takes a MapConverter<SSHKey> as argument instead of
  just MapConverter
- split some very involved one-liners in multiple statements. More readable and
  easier to track casts
- remove unneeded imports
- replace some for(int i..) with for(Object... : ...) which is more performant
  for Collections based types.
- replace some String concatenations with a StringBuilder which is more
  efficient for repeated concats
- reverse a variable.equals(constant) to prevent potential NPE
- remove some unused assignments (oa2MPService.getAccessToken() and
  oa2MPService.getCert())
- remove some unneeded casts.
- remove some unneeded 'throws' (overridden method can throw less)
- add final to some variables that are assigned only once (typically objects).
- fix some javadoc links to private methods, by linking to the object and moving
  the actual method outside the link.
- replace deprecated DigestUtils.shaHex with DigestUtils.sha1Hex. Ideally at
  some point the secrets should be verified with a different hash but then need
  to update the existing hashes.
- check that obj is actually a SSHKeyIdentifier in its equals. Otherwise it
  cannot be equal since the identifier is local.
- Define constants in final class instead of interface (except for
  MPOA4MPConfigTags which extends another interface)